Fixed scrollbar on firefox

--- a/assets/css/side-menu.css
+++ b/assets/css/side-menu.css
@@ -37,6 +37,7 @@
     top: 2rem;
     bottom: 1rem;
     overflow-y: scroll;
+    scrollbar-width: none;
 }
 
 #side-menu-content h1 {
